--- a/app/views/songs/edit.html.erb
+++ b/app/views/songs/edit.html.erb
@@ -1,5 +1,5 @@
-<%= form_for @song do |f| %>
-  <%= f.text_field :title %>
-  <%= f.text_area :content %>
-  <%= f.submit %>
-<% end %>
+<h1>Editing <%= @song.title %> by <%= @song.artist_name %></h1>
+
+<%= render 'form' %>
+
+<%= link_to 'Cancel Editing', @song %>
